--- a/src/assets/styles/globalClasses.css
+++ b/src/assets/styles/globalClasses.css
@@ -6,7 +6,7 @@
 
 /*Global*/
 :root {
-    --white: #E5D8D8;
+    --white: #e3e5d8;
     --accentColor: #1FAF47;
     --figure_borders: 1px solid #e5d8d8a6;
     --accentFont: Michega;
@@ -19,6 +19,31 @@
     outline: none;
     vertical-align: baseline;
 }
+html {
+    scroll-behavior: smooth;
+}
+* {
+    scrollbar-width: thin;
+    scrollbar-color: var(--black);
+}
+*::-webkit-scrollbar {
+    width: 10px;
+}
+*::-webkit-scrollbar-track, *::-webkit-scrollbar-track:hover, *::-webkit-scrollbar-track:active {
+    background-color: var(--black);
+}
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    border: 1px solid var(--black);
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: rgba(227, 229, 216, 0.247);
+
+} *::-webkit-scrollbar-thumb:hover, *::-webkit-scrollbar-thumb:active {
+    background-color: var(--white);
+}
 body {
     background-color: var(--black);
     width: 100vw;
@@ -27,7 +52,7 @@ body {
 main {
     padding: 90px 5vw 0px;
 }
-a, button, img {
+a, button {
     text-decoration: none;
     color: var(--white);
     transition: all .4s;
@@ -57,6 +82,9 @@ h3 {
     letter-spacing: -1.6px;
     text-transform: uppercase;
 }
+ul {
+    list-style: none;
+}
 
 /*Navigation bar*/
 header {
@@ -67,10 +95,12 @@ header {
     z-index: 10;
 }
 nav {
-    position: sticky;
-    top: 0px;
+    position: fixed;
+    top: -50px;
+    transition: ease-in-out 0.3s;
+    opacity: 0;
     width: 100%;
-    padding: 30px 5vw;
+    padding: 15px 5vw;
     margin: 0%;
     display: flex;
     flex-direction: row;
@@ -79,40 +109,33 @@ nav {
     background: #171717c9;
     backdrop-filter: blur(3px);
 }
-nav div:nth-of-type(2n), nav button {
-    width: max-content;
-    color: #918f8f;
-    display: inline-flex;
-}
 #ctnNavLinks {
-    width: 80%;
+    width: 100%;
     display: flex;
     justify-content: center;
     color: var(--white);
-    margin-left: 10%;
-
 }
-nav a, nav button {
+nav a {
     text-align: center;
+    color: inherit;
     font-weight: 300;
     font-family: var(--mainFont);
     font-size: 1.4rem;
     letter-spacing: -0.6px;
     text-transform: capitalize;
-    width: 33%;
-} 
-nav a:active, nav a:hover, nav button:hover {
-    color: var(--accentColor);
-    text-decoration-line: underline;
+	text-decoration: none;
+	transition: .25s ease;
+    margin: 0px 10px;
 }
-nav button {
-    background-color: transparent;
-    border: none;
-    width: auto;
-    height: auto;
+nav ul:hover a {
+    color: #e3e5d8b6;
+    opacity: 100;
 }
-
-.accent {
+nav li:hover a:hover {
+    color: var(--white);
+    box-shadow: 0 2px 0 0 currentcolor;
+}
+a:hover, .accent, button:hover {
     color: var(--accentColor);
 }
 
@@ -125,4 +148,125 @@ nav button {
     h3 {
         font-size: 4vw;
     }
+}
+
+/*Animations*/
+.focus-in {
+	-webkit-animation: focus-in 0.8s cubic-bezier(0.550, 0.085, 0.680, 0.530) 1ms both;
+	        animation: focus-in 0.8s cubic-bezier(0.550, 0.085, 0.680, 0.530) 1ms both;
+}
+ @-webkit-keyframes focus-in {
+    0% {
+      -webkit-filter: blur(12px);
+              filter: blur(12px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-filter: blur(0px);
+              filter: blur(0px);
+      opacity: 1;
+    }
+  }
+  @keyframes focus-in {
+    0% {
+      -webkit-filter: blur(12px);
+              filter: blur(12px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-filter: blur(0px);
+              filter: blur(0px);
+      opacity: 1;
+    }
+}
+
+.slideInRight {
+    -webkit-animation-name: slideInRight;
+    animation-name: slideInRight;
+    -webkit-animation-duration: 1.5s;
+    animation-duration: 1.5s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    animation-delay: 1s;
+    transition: ease-in;
+}
+    @-webkit-keyframes slideInRight {
+        0% {
+            -webkit-transform: translateX(150%);
+            transform: translateX(150%);
+        }
+        100% {
+            -webkit-transform: translateX(0);
+            transform: translateX(0);
+        }
+}
+@keyframes slideInRight {
+    0% {
+        -webkit-transform: translateX(150%);
+        transform: translateX(150%);
+        visibility: visible;
+    }
+    100% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+} 
+
+.slideInLeft {
+    -webkit-animation-name: slideInLeft;
+    animation-name: slideInLeft;
+    -webkit-animation-duration: 1.5s;
+    animation-duration: 1.5s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    transition: all 1s easeInOut 0s;
+    animation-delay: 1s;
+}
+@-webkit-keyframes slideInLeft {
+    0% {
+        -webkit-transform: translateX(-150%);
+        transform: translateX(-150%);
+    }
+    100% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+}
+@keyframes slideInLeft {
+    0% {
+        -webkit-transform: translateX(-150%);
+        transform: translateX(-150%);
+    }
+    100% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+} 
+
+
+/*FIGURES*/
+.arc, .star, .line, #about_ctnFigures, .halfCircle, .fullCircle {
+    position: absolute;
+    z-index: -2;
+}
+.arc {
+    border-radius: 35vw 35vw 0px 0px;
+    flex-shrink: 0;
+}
+.halfCircle {
+    border: var(--figure_borders);
+
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.line, .arc, .fullCircle {
+    border: var(--figure_borders);
+}
+.positionRelative {
+    position: relative;
+    height: max-content;
+}
+.fullCircle {
+    border-radius: 100%;
 }
