--- a/src/assets/styles/portfolio.css
+++ b/src/assets/styles/portfolio.css
@@ -12,12 +12,14 @@ h2 {
 #bkg_gradient {
     width: 100vw;
     position: absolute;
-    z-index: 2;
+    z-index: 10;
     background: linear-gradient(180deg, #17171700 0%, #171717 100%);
 }
 
 #ctn_myImg {
     width: 100%;
+    position: relative;
+    z-index: 2;
     display: flex;
     justify-content: center;
 }
@@ -30,15 +32,17 @@ h2 {
     position: absolute;
     width: 50vw;
     min-width: 250px;
-    z-index: -1;
+    z-index: 2;
     object-fit: cover;
-    object-position: top center;
+    object-position: center center;
     border-radius: 35vw 35vw 0px 0px;
 }
 
 #landing_star {
     top: 50%;
     left: -9vw;
+    width: 45%;
+    height: 45%;
 }
 #landing_firstArc {
     left: 14vw;
@@ -61,7 +65,10 @@ h2 {
     left: 0px;
 }
 #landing_halfCircle {
+    border-bottom: 0;
     top: 55%;
+    position: absolute;
+    z-index: -2;
     left: calc((100% - 60vw)/2);
     transform: rotate(180deg);
     width: 60vw;
@@ -112,9 +119,6 @@ h2 {
     opacity: 80%;
     margin-bottom: 5px;
 }
-.about_text ul {
-    list-style: none;
-}
 .about_text li:before {
     content: "-";
     padding-right: 1ch;
@@ -123,7 +127,6 @@ h2 {
     font-size: 1.3rem;
 }
 #ctn_aboutPhrase div a {
-    color: var(--accentColor);
     font-weight: 300;
     font-family: var(--mainFont);
     font-size: 1.2rem;
@@ -135,9 +138,27 @@ h2 {
 #about_phrase {
     color: var(--white);
     font-weight: 400;
+    margin-bottom: 0.5rem;
     font-family: var(--accentFont);
     letter-spacing: -1px;
     text-transform: uppercase;
+}
+
+#about_ctnFigures {
+    left: 0%;
+    width: 100%;
+    padding: 0%;
+    display: flex;
+}
+#about_halfCircle {
+    border-left: 0;
+    margin-right: 0%;
+}
+#about_firstFullCircle {
+    margin-right: 3vw;
+}
+#about_sndFullCircle {
+    margin-right: 5vw;
 }
 
 /*Projects*/
@@ -145,82 +166,80 @@ h2 {
     padding: 0 0 2em;
     text-align: center;
 }
-#content-archive .thumbnail, .thumbnail {
-    display: inline-block;
-    margin: 2.5em;
-    vertical-align: top;
-    width: 250px;
-}
 .thumbnail {
-    margin: 2.5em 2.5em 4.64em;
+    margin: 20px 20px;
+    position: relative;
     display: inline-block;
-    margin: 2.5em;
+    color: var(--white);
     vertical-align: top;
-    width: 250px;
-    height: 250px;
-} .thumbnail a, .thumbnail img {
+    width: 40%;
+    min-width: 300px;
+    min-height: 200px;
+    height: 20%;
+} .thumbnail a {
+    width: 100%;
+} .thumbnail img {
     max-width: 100%;
-    object-fit: contain;
-    height: inherit;
+    object-fit: cover;
     border: 0px;
 }
-#content-archive .thumbnail .hover, .thumbnail .hover {
-    z-index: 0;
-    width: 17.85em;
-    opacity: 100;
+.thumbnail a:first-of-type > div {
+    position: absolute;
+    opacity: 0;
+    z-index: 6;
+    width: 100%;
+    height: calc(100% - 3px);
+    /*background: linear-gradient(33deg, rgba(0, 0, 0, 0.60) 0%, rgba(0, 0, 0, 0.00) 100%);*/
+}
+.thumbnail .hover {
+    margin-top: 5px;
+}
+.thumbnail .hover a {
+    opacity: 0;
+    width: 100%;
     transition: all .4s;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+.thumbnail .hover a p:first-of-type {
+    font-family: var(--accentFont);
+}
+#content-archive .thumbnail:hover .hover a, .thumbnail:hover a:first-of-type > div{
+    opacity: 1;
+    color: var(--white);
 }
 .tags {
-    font-size: .785em;
-    line-height: 1.36em;
-    text-transform: uppercase;
-    letter-spacing: 1px;
+    font-size: 1.3em;
+    line-height: 2.3em;
     display: block;
-    margin-bottom: 0.214rem;
-    font-weight: 400;
+    margin: 0;
+    padding: 0;
+    text-align: right;
+    text-wrap: nowrap;
+    font-weight: 300;
 }
 .project_title {
     font-size: 2.14em;
-    text-transform: uppercase;
-    letter-spacing: 1px;
     font-weight: 400;
     margin: 0;
-    padding: 0;
+    padding: 0px 10px 0px 0px;
+    text-align: left;
 }
 #content-archive .thumbnail .hover h1, #home-archive .thumbnail .hover h1 {
     margin-top: 0.083em;
 }
 
-/*FIGURES*/
-.arc, .halfCircle, .star, .line {
-    position: absolute;
-    z-index: -2;
-}
-.arc {
-    border-radius: 35vw 35vw 0px 0px;
-    border: var(--figure_borders);
-    flex-shrink: 0;
-}
-.halfCircle {
-    border: var(--figure_borders);
-    border-bottom: 0;
 
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+@media only screen and (max-width: 768px) {
+    .thumbnail .hover a {
+        opacity: 1;
+    }
+    .thumbnail:hover a:first-of-type > div{
+        opacity: 0;
+    }
 }
-.star {
-    width: 45%;
-    height: 45%;
-}
-.line {
-    border: var(--figure_borders);
-}
-.positionRelative {
-    position: relative;
-    height: max-content;
-}
-
 @media (max-width: 820px) {
     h3 {
         margin: 100px 0px 50px;
@@ -237,6 +256,7 @@ h2 {
 }
 @media (min-width: 820px) {
     h3 {
+        margin: 100px 0px 80px;
         padding-top: 70px;
     }
     #about > div:first-of-type > div:first-of-type {
@@ -257,6 +277,7 @@ h2 {
         align-items: center;
     }
     #about_phrase {
+        line-height: calc(2.3rem - 15%);
         font-size: 2.3rem;
         text-align: center;
     }
@@ -264,6 +285,26 @@ h2 {
         display: flex;
         justify-content: center;
         flex-direction: row;
+    }
+    #about_ctnFigures {
+        bottom: 0%;
+        height: max-content;
+        justify-content: flex-end;
+        align-items: center;
+    }
+    #about_star {
+        bottom: 100%;
+        width: 5vw;
+        height: 5vw;
+    }
+    #about_halfCircle {
+        width: 10vw;
+        height: 20vw;
+        border-radius: 0px 60vw 60vw 0px;
+    }
+    #about_firstFullCircle, #about_sndFullCircle {
+        height: 15vw;
+        width: 15vw;
     }
 }
 @media (min-width: 1000px) {
@@ -275,6 +316,7 @@ h2 {
         flex-direction: row;
     }
     #about_phrase {
+        line-height: calc(50px - 15%);
         font-size: 50px;
         text-align: right;
     }
@@ -285,6 +327,28 @@ h2 {
         display: flex;
         justify-content: flex-end;
         flex-direction: row;
+    }
+    #about_ctnFigures {
+        top: 0%;
+        height: 100%;
+        justify-content: flex-end;
+        align-items: center;
+    }
+    #about_star {
+        top: 35%;
+        width: 10%;
+        height: 10%;
+    }
+    #about_halfCircle {
+        width: 30vw;
+        height: 60vw;
+        border-radius: 0px 60vw 60vw 0px;
+    }
+    #about_firstFullCircle, #about_sndFullCircle {
+        height: 40vw;
+        width: 40vw;
+        max-height: 600px;
+        max-width: 600px;
     }
 }
 @media (min-width: 1420px) {
