--- a/src/assets/styles/contact.css
+++ b/src/assets/styles/contact.css
@@ -31,7 +31,8 @@ footer {
     justify-content: center;
     align-items: center;
     transition: background-color .3s;
-} .social-icon, .social-icon svg {
+}
+.social-icon, .social-icon svg {
     width: calc(8vw - 20%);
     min-width: 15px;
     max-width: 40px;
@@ -53,7 +54,6 @@ footer {
     cursor: pointer;
 }
 #footer_firstLine {
-    font-size: 1.7rem;
     font-family: var(--mainFont);
     font-weight: 300;
     display: flex;
@@ -102,4 +102,15 @@ footer h1 {
     top: 7vw;
     height: 25vw;
     width: 25vw;
+}
+
+@media (max-width: 820px) {
+    #footer_firstLine {
+        font-size: 1.3rem;
+    }
+}
+@media (min-width: 820px) {
+    #footer_firstLine {
+        font-size: 1.7rem;
+    }
 }
